--- a/index.html
+++ b/index.html
@@ -459,11 +459,8 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Developed by <a href="https://instagram.com/haziqmishhak?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr">HaziqMishhak</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
