--- a/index.html
+++ b/index.html
@@ -278,18 +278,18 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/55.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/55.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/55.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Inside the Kiosk"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/55.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Inside the Kiosk"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/56.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/56.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/56.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The component for the Kiosk"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/56.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The component for the Kiosk"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
