--- a/index.html
+++ b/index.html
@@ -274,46 +274,49 @@
           </ul>
         </div>
 
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+        <div class="w3-row-padding w3-margin-top" data-aos="fade-up">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
+          <div class="w3-half portfolio-item">
+            <div class="portfolio-wrap w3-card">
               <img src="assets/img/portfolio/55.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/55.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Inside the Kiosk"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/55.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="An overview of what inside the return book kiosk"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
+          <div class="w3-half portfolio-item">
+            <div class="portfolio-wrap w3-card">
               <img src="assets/img/portfolio/56.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/56.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The component for the Kiosk"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/56.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The component that used for developing return book kiosk (Raspberry Pi 4)"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
+        <div class="w3-row-padding w3-margin-top" data-aos="fade-up">
+
+          <div class="w3-half portfolio-item">
+            <div class="portfolio-wrap w3-card">
               <img src="assets/img/portfolio/4.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The look of the front Kiosk"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The look of the front of return book kiosk with Touch screen display"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
+          <div class="w3-half portfolio-item">
+            <div class="portfolio-wrap w3-card">
               <img src="assets/img/portfolio/3.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Interface of web application"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web Application for monitoring and handle library management"><i class="bx bx-plus"></i></a>
                 <a href="https://libraryuis.site/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-
         </div>
+
 
       </div>
     </section><!-- End Portfolio Section -->
