--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <p><em>Role: Multimedia Committee Member</em></p>
                 <ul>
                   <li>Contributed to the editing and post-production process of digital materials used for program promotion and participant engagement.</li>
-                  <li>Engaged in rigorous cybersecurity competitions, applying theoretical knowledge and practical skills to solve real-world security problems.</li>
+                  <li>Participated in content brainstorming sessions to align multimedia outputs with educational objectives.</li>
                 </ul>
               </div>
               <div class="resume-item">
