--- a/index.html
+++ b/index.html
@@ -267,10 +267,23 @@
           <h2>Project</h2>
           <h4>Automated Return Library Management System</h4>
           <p><em>Final Year Project, 2023</em></p>
+          <p><em>The Project consists of 2 main components:</em></p>
+          <br>
+          <p><b>Web Application</b></p>
           <ul>
-            <li>Developed the user interface in Python with Tkinter and the web application with PHP/MySQL for real-time inventory management.</li>
-            <li>Integrated hardware and software to deliver a comprehensive library management system, enhancing user experience and operational workflow.</li>
+            <li>Developed intuitive web app (HTML, Bootstrap,
+              CSS, JS).</li>
+            <li>Hosted on iFastNet with C
+              Panel, featuring robust PHP/MySQL backend for real-time monitoring.</li>
           </ul>
+          <p><b>Kiosk Integration with Raspberry Pi 4:</b></p>
+          <ul>
+            <li>Engineered user-friendly kiosk with Raspberry Pi 4, incorporating IR sensors, buzzers, and RFID
+              scanners.</li>
+            <li>Overcame integration challenges to design a seamless Python system on Raspbian OS for user-
+              friendly book returns.</li>
+          </ul>
+          <P>Highlights full-stack development—front-end, back-end, hardware integration, and Python scripting.</P>
         </div>
 
         <div class="w3-row-padding w3-margin-top" data-aos="fade-up">
