--- a/AriaSE.html
+++ b/AriaSE.html
@@ -41,6 +41,9 @@
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="">Haziq Mishhak</a></h1>
+        <a aria-label="Chat on WhatsApp" href="https://wa.me/01112249105"> <img alt="Chat on WhatsApp" src="assets/img/WhatsAppButtonGreenLarge.svg">
+        </a>
+        
       </div>
 
     </div>
