whatapp link update

--- a/AriaSE.html
+++ b/AriaSE.html
@@ -41,7 +41,7 @@
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="">Haziq Mishhak</a></h1>
-        <a aria-label="Chat on WhatsApp" href="https://wa.me/01112249105"> <img alt="Chat on WhatsApp" src="assets/img/WhatsAppButtonGreenLarge.svg">
+        <a aria-label="Chat on WhatsApp" href="https://api.whatsapp.com/send?phone=1112249105&text=NAK%20BELI%20IEM%20KAU"> <img alt="Chat on WhatsApp" src="assets/img/WhatsAppButtonGreenLarge.svg">
         </a>
         
       </div>
